--- a/webpages/register.html
+++ b/webpages/register.html
@@ -188,15 +188,48 @@
                         </div>
                     </div>
                     <div class="row">
-                        <div class="col-sm-6 form-group" ng-class="{'has-error': registrationForm.uid.$invalid && registrationForm.uid.$touched,
-                                                                    'has-success': registrationForm.uid.$valid && registrationForm.uid.$touched}">
-                            <label class="control-label">UID<red-asterisk></red-asterisk></label>
-                            <div ng-messages="registrationForm.uid.$error" style="color:maroon" role="alert" ng-hide="registrationForm.uid.$untouched">
+                        <div class="col-sm-12 form-group" ng-class="{'has-error': registrationForm.email.$invalid && registrationForm.email.$touched,'has-success': registrationForm.email.$valid && registrationForm.email.$touched}">
+                            <label class="control-label">Email Address<red-asterisk></red-asterisk></label>
+                            <div ng-messages="registrationForm.email.$error" style="color:maroon" role="alert" ng-hide="registrationForm.email.$untouched">
                                 <div class="alert alert-danger" role="alert" ng-message="required">
                                     <span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span>
                                     <span class="sr-only">Error:</span>
-                                    A UID is required.
+                                    An email address is required.
                                 </div>
+                                <div class="alert alert-danger" role="alert" ng-message="email">
+                                    <span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span>
+                                    <span class="sr-only">Error:</span>
+                                    Your email is invalid.
+                                </div>
+                            </div>
+                            <input type="email" placeholder="Enter Email Address Here.." name="email" class="form-control" ng-model="register.email" required>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-sm-6 form-group" ng-class="{'has-error': registrationForm.gradyear.$invalid && registrationForm.gradyear.$touched,
+                                                                    'has-success': registrationForm.gradyear.$valid && registrationForm.gradyear.$touched}">
+                            <label class="control-label">Graduation Year<red-asterisk></red-asterisk></label>
+                            <div ng-messages="registrationForm.gradyear.$error" style="color:maroon" role="alert" ng-hide="registrationForm.gradyear.$untouched">
+                                <div class="alert alert-danger" role="alert" ng-message="required">
+                                    <span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span>
+                                    <span class="sr-only">Error:</span>
+                                    A graduation year is required.
+                                </div>
+                            </div>
+                            <select class="form-control" ng-model="register.gradYear" required name="gradyear">
+                                <option value="0">Not a UCLA Student</option>
+                                <option value="2016">2016</option>
+                                <option value="2017">2017</option>
+                                <option value="2018">2018</option>
+                                <option value="2019">2019</option>
+                                <option value="2020">2020</option>
+                                <option value="2020">2021</option>
+                                <option value="1">Graduated</option>
+                            </select>
+                        </div>
+                        <div class="col-sm-6 form-group" ng-class="{'has-error': registrationForm.uid.$invalid && registrationForm.uid.$touched,'has-success': registrationForm.uid.$valid && registrationForm.uid.$touched}">
+                            <label class="control-label">UID</label>
+                            <div ng-messages="registrationForm.uid.$error" style="color:maroon" role="alert" ng-hide="registrationForm.uid.$untouched">
                                 <div class="alert alert-danger" role="alert" ng-message="minlength">
                                     <span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span>
                                     <span class="sr-only">Error:</span>
@@ -215,27 +248,7 @@
                                 name="uid"
                                 minlength="9"
                                 maxlenght="9"
-                                required
                             >
-                        </div>
-                        <div class="col-sm-6 form-group" ng-class="{'has-error': registrationForm.gradyear.$invalid && registrationForm.gradyear.$touched,
-                                                                    'has-success': registrationForm.gradyear.$valid && registrationForm.gradyear.$touched}">
-                            <label class="control-label">Graduation Year<red-asterisk></red-asterisk></label>
-                            <div ng-messages="registrationForm.gradyear.$error" style="color:maroon" role="alert" ng-hide="registrationForm.gradyear.$untouched">
-                                <div class="alert alert-danger" role="alert" ng-message="required">
-                                    <span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span>
-                                    <span class="sr-only">Error:</span>
-                                    A graduation year is required.
-                                </div>
-                            </div>
-                            <select class="form-control" ng-model="register.gradYear" required name="gradyear">
-                                <option value="2016">2016</option>
-                                <option value="2017">2017</option>
-                                <option value="2018">2018</option>
-                                <option value="2019">2019</option>
-                                <option value="2020">2020</option>
-                                <option value="2020">2021</option>
-                            </select>
                         </div>
                     </div>
 
@@ -244,10 +257,6 @@
                         <label>Phone Number</label>
                         <input type="text" placeholder="Enter Phone Number Here.." class="form-control" phone-input ng-model="register.phoneNumber">
                     </div>      
-                    <div class="form-group">
-                        <label>Email Address</label>
-                        <input type="email" placeholder="Enter Email Address Here.." class="form-control" ng-model="register.email">
-                    </div>
                         <button type="button" class="btn btn-lg btn-info" ng-click="register.register()">Submit</button>                   
                     </div>
                 </form>
