--- a/webpages/htmltemplates/merch-sidebar.html
+++ b/webpages/htmltemplates/merch-sidebar.html
@@ -2,7 +2,7 @@
     <p class="lead">Augment Merch!</p>
     <div class="list-group">
         <a ng-repeat="category in categories"
-        	ng-href="category.href" 
+        	ng-href="{{category.href}}" 
         	class="list-group-item" 
         	ng-class="{'active': getActiveCategory(input) === category.categoryId}">
         	{{category.name}}
