Added preliminary cookie info, some unrelated notes, registration edited to allow signaling for area of interest.

--- a/webpages/item.html
+++ b/webpages/item.html
@@ -22,6 +22,7 @@
 
     <!-- Angular -->
     <script type="text/javaScript" src="/js/angular.min.js"></script>
+    <script type="text/JavaScript" src="/js/angular-cookies.js"></script>
     <script type="text/javaScript" src="/js/headerController.js"></script>
     <script type="text/javaScript" src="/js/looseTemplates.js"></script>
     <script type="text/javaScript" src="/js/itemApp.js"></script>
