--- a/webpages/login.html
+++ b/webpages/login.html
@@ -24,6 +24,7 @@
 
     <!-- Angular -->
     <script type="text/JavaScript" src="/js/angular.min.js"></script>
+    <script type="text/JavaScript" src="/js/angular-cookies.js"></script>
     <script type="text/javascript" src="/js/indexBlogApp.js"></script>
     <script type="text/javascript" src="/js/headerController.js"></script>
     <script type="text/javascript" src="/js/blogSidebar.js"></script>
