--- a/webpages/merch.html
+++ b/webpages/merch.html
@@ -22,6 +22,7 @@
 
     <!-- Angular Scripts -->
     <script type="text/JavaScript" src="/js/angular.min.js"></script>
+    <script type="text/JavaScript" src="/js/angular-cookies.js"></script>
     <script type="text/JavaScript" src="/js/merchApp.js"></script>
     <script type="text/JavaScript" src="/js/looseTemplates.js"></script>
     <script type="text/JavaScript" src="/js/headerController.js"></script>
