--- a/webpages/blog-post.html
+++ b/webpages/blog-post.html
@@ -22,6 +22,7 @@
 
     <!-- Angular -->
     <script type="text/JavaScript" src="/js/angular.min.js"></script>
+    <script type="text/JavaScript" src="/js/angular-cookies.js"></script>
     <script type="text/javascript" src="/js/headerController.js"></script>
     <script type="text/javascript" src="/js/looseTemplates.js"></script>
     <script type="text/javascript" src="/js/blogSidebar.js"></script>
