--- a/webpages/cart.html
+++ b/webpages/cart.html
@@ -23,6 +23,7 @@
 
     <!-- Angular Scripts -->
     <script type="text/JavaScript" src="/js/angular.min.js"></script>
+    <script type="text/JavaScript" src="/js/angular-cookies.js"></script>
     <script type="text/JavaScript" src="/js/looseTemplates.js"></script>
     <script type="text/JavaScript" src="/js/headerController.js"></script>
     <script type="text/JavaScript" src="/js/cartApp.js"></script>
