--- a/webpages/orders.html
+++ b/webpages/orders.html
@@ -25,6 +25,7 @@
 
     <!-- Angular -->
     <script type="text/JavaScript" src="/js/angular.min.js"></script>
+    <script type="text/JavaScript" src="/js/angular-cookies.js"></script>
     <script type="text/JavaScript" src="/js/angular-messages.js"></script>
     <script type="text/JavaScript" src="/js/headerController.js"></script>
     <script type="text/JavaScript" src="/js/looseTemplates.js"></script>
