--- a/webpages/about.html
+++ b/webpages/about.html
@@ -126,10 +126,27 @@
             <div class="col-lg-12">
                 <h2 class="page-header">{{portfolio.header}}</h2>
             </div>
-            <div class="col-md-4 col-sm-6" ng-repeat="icon in portfolio.iconData track by $index">
-                <a ng-href="{{icon.imageLink}}" target="_self">
-                    <img class="img-responsive img-portfolio img-hover" ng-src="{{icon.imageSrc}}" alt="">
-                </a>
+            <div class="col-md-12 col-sm-6" ng-repeat="icon in portfolio.iconData track by $index">
+                <div class="col-md-4">
+                    <a ng-href="{{icon.imageLink}}" target="_self">
+                        <img class="img-responsive img-portfolio img-hover" ng-src="{{icon.imageSrc}}" alt="">
+                    </a>
+                </div>
+                <div class="col-md-8">
+                    <div class="panel panel-default">
+                        <div class="panel-heading">
+                            <h4>
+                                <a ng-href="{{icon.imageLink}}" target="_self">
+                                    {{icon.title}}
+                                </a>
+                            </h4>
+                        </div>
+                        <div class="panel-body">
+                            <p>{{icon.description}}</p>
+                        </div>
+                    </div>
+                </div>
+                <p>
             </div>
         </div>
         <!-- /.row -->
