--- a/webpages/about.html
+++ b/webpages/about.html
@@ -126,7 +126,7 @@
             <div class="col-lg-12">
                 <h2 class="page-header">{{portfolio.header}}</h2>
             </div>
-            <div class="col-md-12 col-sm-6" ng-repeat="icon in portfolio.iconData track by $index">
+            <div class="col-md-12" ng-repeat="icon in portfolio.iconData track by $index">
                 <div class="col-md-4">
                     <a ng-href="{{icon.imageLink}}" target="_self">
                         <img class="img-responsive img-portfolio img-hover" ng-src="{{icon.imageSrc}}" alt="">
@@ -143,6 +143,14 @@
                         </div>
                         <div class="panel-body">
                             <p>{{icon.description}}</p>
+                            <div>
+                                <div class="col-xs-1" ng-repeat="socialMedia in icon.socialMedia">
+                                    <a ng-href="{{socialMedia.imageLink}}" target="_self">
+                                        <i class="fa img-responsive img-hover fa-2x" ng-class="socialMedia.icon">
+                                        </i>
+                                    </a>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
