Lots of changes! 1. Carosel (sic) is prettier, copying the image to a div and bluring that div, providing a background for arbitrary image sizes. 2. Todo page updated 3. About controller fixed so teams actually displays things dynamically 4. Some page info for the fall lan party is up! 5. CSS changes to support the previous carousel changes 6. Image for fall lan added.

--- a/webpages/about.html
+++ b/webpages/about.html
@@ -56,8 +56,11 @@
         <!-- Wrapper for slides -->
         <div class="carousel-inner">
             <div class="item" ng-repeat="slide in carousel.slides track by $index" ng-class="carousel.getActive($index)">
-                <div class="fill" ng-style="{'background-image':'url(' + slide.imageSrc + ')'}"></div>
-                <!-- <img ng-src="{{slide.imageSrc}}"> -->
+            <!-- ng-style="{'background-image':'url(' + slide.imageSrc + ')'}" -->
+                <div class="fillDiv">
+                    <div class="fillDiv blur" ng-style="{'background-image':'url(' + slide.imageSrc + ')'}"></div>
+                    <img class="fill" ng-src="{{slide.imageSrc}}">
+                </div>
                 <div class="carousel-caption">
                     <h2>{{slide.imageCaption}}</h2>
                 </div>
@@ -91,7 +94,8 @@
                         <h4>{{block.title}}</h4>
                     </div>
                     <div class="panel-body">
-                        <p>{{block.content}}</p>
+                        <div ng-bind-html="block.content"></div>
+                        <!-- <p>{{block.content}}</p> -->
                         <a ng-hide="{{block.linkText === null}}" ng-href="{{block.linkUrl}}" target="_self" class="btn btn-default">{{block.linkText}}</a>
                     </div>
                 </div>
