--- a/webpages/htmltemplates/footer-and-copyright.html
+++ b/webpages/htmltemplates/footer-and-copyright.html
@@ -1,7 +1,25 @@
 <footer>
 	<div class="row">
 		<div class="col-lg-12">
-			<p>Copyright &copy; UCLA Augment. </p>
+			<div class="col-md-6">
+				<div class="col-xs-4">
+					<a href="/about" target="_self">About</a>
+				</div>
+				<div class="col-xs-4">
+					<a href="/tournament" target="_self">Tournament Signup</a>
+				</div>
+				<div class="col-xs-4">
+					<a href="/calendar" target="_self">Calendar</a>
+				</div>
+			</div>
+			<div class="col-md-6">
+			Social media icons here
+			</div>
 		</div>
+	</div>
+	<div class="row">
+		<div class=col-lg-12>
+			<p>Copyright &copy; UCLA Augment. </p>
+		<div>
 	</div>
 </footer>
