Beginning admin control work, not complete in the slightest. Working on adding sponsors.

--- a/adminPages/admin-controls.html
+++ b/adminPages/admin-controls.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>SB Admin - Bootstrap Admin Template</title>
+    <title>Admin Controls: AUGment@UCLA</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -29,7 +29,7 @@
     <script type="text/JavaScript" src="/js/angular-messages.js"></script>
     <script type="text/JavaScript" src="/js/headerController.js"></script>
     <script type="text/JavaScript" src="/js/looseTemplates.js"></script>
-    <script type="text/JavaScript" src="/js/adminControlsApp.js"></script>
+    <script type="text/JavaScript" src="/js/adminControlsHomeApp.js"></script>
     <script type="text/javascript" src="/js/registrationDirectives.js"></script>
 
     <!-- Base Path -->
@@ -44,7 +44,7 @@
 
 </head>
 
-<body ng-app="SettingsPage" ng-cloak>
+<body ng-app="AdminControlsHomePage" ng-cloak>
 
     <div id="wrapper">
 
