Changes to about pages, items, stores, and CSS related to the merch website. Lots of images added. Registration background changed. Next is membership.

--- a/webpages/item.html
+++ b/webpages/item.html
@@ -89,8 +89,8 @@
                                         </button>
                                     </div>
                                 </div>
-                                <div class="alert alert-danger" ng-hide="item.purchasable">
-                                    <em>Sorry, this is out of stock. Check back later!</em>
+                                <div class="alert alert-info" ng-hide="item.purchasable">
+                                    <em>Talk to one of the AUGment officers to buy a membership!</em>
                                 </div>
                                 <div class="alert alert-info" ng-show="item.alreadyHas">
                                     <em>You seem to already have one of these! Probably don't want to buy another. </em>
