--- a/adminPages/admin-controls.html
+++ b/adminPages/admin-controls.html
@@ -53,12 +53,12 @@
 
         <div id="page-wrapper">
 
-            <div class="container-fluid" ng-controller="SettingsController as settings">
+            <div class="container-fluid" ng-controller="PageController as settings">
 
                 <!-- Page Heading -->
                 <div class="row col-lg-9">
                     <div class="col-lg-12">
-                        <h1 class="page-header">
+                        <h1 class="page-header" ng-cloak>
                             Welcome,  {{settings.obtainedFirstName}}! <small>Here are the currently available admin controls. Expect things to be a little janky.</small>
                         </h1>
                         <!-- <ol class="breadcrumb">
@@ -70,7 +70,7 @@
                 </div>
 
                 <!-- See active memberships -->
-                <div class="row col-lg-9" ng-controller="MembershipController as memberships">
+                <div class="row col-lg-9" ng-controller="MembershipSetterController as membershipController">
                     <div class="col-md-4">
                         <h2>
                             Membership Information
@@ -79,7 +79,47 @@
                         </h2>
                     </div>
                     <div class="col-md-8">
-                        
+                        <div class="row">
+                            <form name="searchForm">
+                                <div class="col-sm-12 row">
+                                    <label class="control-label">Username or Email<red-asterisk></red-asterisk></label>
+                                    <input type="text" 
+                                        placeholder="Search..." 
+                                        class="form-control"
+                                        ng-model="membershipController.searchString" 
+                                        required
+                                        name="searchString"   
+                                    >
+                                </div>
+                                <div class="col-sm-12 row">
+                                    <button type="button" class="btn btn-lg btn-info" ng-click="membershipController.search()">Search</button>
+                                </div>
+                            </form>
+                        </div>
+                        <!-- Table data for matching users -->
+                        <table class="table table-hover">
+                            <thead>
+                                <tr>
+                                    <th>Username</th>
+                                    <th>Email</th>
+                                    <th>First Name</th>
+                                    <th>Last Name</th>
+                                    <th ng-repeat="membershipID in membershipController.allMemberships">{{membershipID}} membership active</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <tr ng-repeat="user in membershipController.users">
+                                    <td>{{user.username}}</td>
+                                    <td>{{user.email}}</td>
+                                    <td>{{user.firstName}}</td>
+                                    <td>{{user.lastName}}</td>
+                                    <td ng-repeat="membershipID in membershipController.allMemberships">
+                                        <input type="checkbox" ng-model="user.membership[membershipID]" 
+                                        ng-click="membershipController.updateMembership(user, membershipID)">
+                                    </td>
+                                </tr>
+                            </tbody>
+                        </table>
                     </div>
                 </div>
 
