Touchup work on logos. Some membership edits.

--- a/webpages/htmltemplates/navbar/navbar-side.html
+++ b/webpages/htmltemplates/navbar/navbar-side.html
@@ -37,7 +37,7 @@
     <li ng-class="{ active: header.isActive('/settings')}">
         <a href="/settings" target="_self"><i class="fa fa-fw fa-cog" aria-hidden="true"></i> Settings</a></li>
     </li>
-    <li ng-class="{ active: header.isActive('/orders')}">
+    <!-- <li ng-class="{ active: header.isActive('/orders')}">
         <a href="/orders" target="_self"><span class="glyphicon glyphicon-shopping-cart" aria-hidden="true"></span> Orders</a></li>
-    </li>
+    </li> -->
 </ul>
