--- a/webpages/item.html
+++ b/webpages/item.html
@@ -67,8 +67,7 @@
                         <div class=row>
                             <div class="col-md-12">
                                 <h4 class="pull-right">{{item.price | currency}}</h4>
-                                <h4><a href="#">{{item.name}}</a>
-                                </h4>
+                                <h2>{{item.name}}</h2>
                                 <p ng-bind-html="item.fullDescription"></p>
                             </div>
                         </div>
