--- a/webpages/htmltemplates/footer-and-copyright.html
+++ b/webpages/htmltemplates/footer-and-copyright.html
@@ -5,15 +5,33 @@
 				<div class="col-xs-4">
 					<a href="/about" target="_self">About</a>
 				</div>
-				<div class="col-xs-4">
+				<!-- <div class="col-xs-4">
 					<a href="/tournament" target="_self">Tournament Signup</a>
-				</div>
-				<div class="col-xs-4">
+				</div> -->
+				<!-- <div class="col-xs-4">
 					<a href="/calendar" target="_self">Calendar</a>
-				</div>
+				</div> -->
 			</div>
 			<div class="col-md-6">
-			Social media icons here
+				<div class='col-xs-4'>
+					Facebook: 
+					<a href="https://www.facebook.com/AugmentUCLA/" target="_self">
+						<i class="fa img-responsive img-hover fa-2x fa-facebook-square">
+						</i>
+					</a>
+				</div>
+				<div class='col-xs-4'>
+					Twitter: 
+					<a href="https://twitter.com/augmentucla" target="_self">
+						<i class="fa img-responsive img-hover fa-2x fa-twitter"></i>
+					</a>
+					</div>
+				<div class='col-xs-4'>
+					Twitch: 
+					<a href="https://www.facebook.com/AugmentUCLA/" target="_self">
+						<i class="fa img-responsive img-hover fa-2x fa-twitch"></i>
+					</a>
+				</div>
 			</div>
 		</div>
 	</div>
