The login page actually works now (whoops)

--- a/webpages/htmltemplates/navbar/navbar-top.html
+++ b/webpages/htmltemplates/navbar/navbar-top.html
@@ -52,7 +52,7 @@
                             	name="password"
                             	ng-model="header.loginPassword"
                             >
-                            <div class="help-block text-right"><a href="">Forgot your password?</a></div>
+                            <!-- <div class="help-block text-right"><a href="">Forgot your password?</a></div> -->
                         </div>
                         <div class="form-group">
                             <button class="btn btn-primary btn-block" ng-click="header.login()">Sign in</button>
