--- a/webpages/htmltemplates/footer-and-copyright.html
+++ b/webpages/htmltemplates/footer-and-copyright.html
@@ -2,42 +2,43 @@
 	<div class="row">
 		<div class="col-lg-12">
 			<div class="col-md-6">
-				<div class="col-xs-4">
-					<a href="/about" target="_self">About</a>
+				<div class="row">
+					<div class="col-xs-4" ng-repeat="headerLink in header.headerLinks">
+						<a ng-href="{{headerLink.href}}" target="_self" ng-bind-html="headerLink.title"></a>
+					</div>
 				</div>
-				<!-- <div class="col-xs-4">
-					<a href="/tournament" target="_self">Tournament Signup</a>
-				</div> -->
-				<!-- <div class="col-xs-4">
-					<a href="/calendar" target="_self">Calendar</a>
-				</div> -->
 			</div>
 			<div class="col-md-6">
-				<div class='col-xs-4'>
-					Facebook: 
-					<a href="https://www.facebook.com/AugmentUCLA/" target="_self">
-						<i class="fa img-responsive img-hover fa-2x fa-facebook-square">
-						</i>
-					</a>
+				<div class="col-sm-6">
+					<p><b>Follow us on social media: </b></p>
 				</div>
-				<div class='col-xs-4'>
-					Twitter: 
-					<a href="https://twitter.com/augmentucla" target="_self">
-						<i class="fa img-responsive img-hover fa-2x fa-twitter"></i>
-					</a>
+				<div class="col-sm-6">
+					<div class='col-xs-4'>
+						<!-- Facebook:  -->
+						<a href="https://www.facebook.com/AugmentUCLA/" target="_self">
+							<i class="fa img-responsive img-hover fa-2x fa-facebook-square">
+							</i>
+						</a>
 					</div>
-				<div class='col-xs-4'>
-					Twitch: 
-					<a href="https://www.facebook.com/AugmentUCLA/" target="_self">
-						<i class="fa img-responsive img-hover fa-2x fa-twitch"></i>
-					</a>
+					<div class='col-xs-4'>
+						<!-- Twitter:  -->
+						<a href="https://twitter.com/augmentucla" target="_self">
+							<i class="fa img-responsive img-hover fa-2x fa-twitter"></i>
+						</a>
+						</div>
+					<div class='col-xs-4'>
+						<!-- Twitch:  -->
+						<a href="https://www.facebook.com/AugmentUCLA/" target="_self">
+							<i class="fa img-responsive img-hover fa-2x fa-twitch"></i>
+						</a>
+					</div>
 				</div>
 			</div>
 		</div>
 	</div>
 	<div class="row">
 		<div class=col-lg-12>
-			<p>Copyright &copy; UCLA Augment. </p>
+			<small>Copyright &copy; UCLA Augment. </small>
 		<div>
 	</div>
 </footer>
