--- a/webpages/htmltemplates/footer-and-copyright.html
+++ b/webpages/htmltemplates/footer-and-copyright.html
@@ -1,44 +1,53 @@
 <footer>
-	<div class="row">
-		<div class="col-lg-12">
-			<div class="col-md-6">
-				<div class="row">
-					<div class="col-xs-4" ng-repeat="headerLink in header.headerLinks">
-						<a ng-href="{{headerLink.href}}" target="_self" ng-bind-html="headerLink.title"></a>
-					</div>
-				</div>
-			</div>
-			<div class="col-md-6">
-				<div class="col-sm-6">
-					<p><b>Follow us on social media: </b></p>
-				</div>
-				<div class="col-sm-6">
-					<div class='col-xs-4'>
-						<!-- Facebook:  -->
-						<a href="https://www.facebook.com/AugmentUCLA/" target="_self">
-							<i class="fa img-responsive img-hover fa-2x fa-facebook-square">
-							</i>
+	<div class="container">
+		<div class="row col-md-4">
+			<img class="img-responsive" src="/logos/augment-full-logo.png">
+		</div>
+		<div class="row">
+			<div class="col-lg-12">
+				<div class="col-md-6">
+					<div class="row">
+						<a ng-repeat="headerLink in header.headerLinks" ng-href="{{headerLink.href}}" target="_self">
+							<div class="col-xs-3" ng-bind-html="headerLink.title">
+
+							</div>
 						</a>
 					</div>
-					<div class='col-xs-4'>
-						<!-- Twitter:  -->
-						<a href="https://twitter.com/augmentucla" target="_self">
-							<i class="fa img-responsive img-hover fa-2x fa-twitter"></i>
-						</a>
+				</div>
+				<div class="col-md-6 pull-right">
+					<div class="col-sm-2">
+					</div>
+					<div class="col-sm-5">
+						<p><b>Follow us on social media: </b></p>
+					</div>
+					<div class="col-sm-5">
+						<div class='col-xs-4'>
+							<!-- Facebook:  -->
+							<a href="https://www.facebook.com/AugmentUCLA/" target="_self">
+								<i class="fa img-responsive img-hover fa-2x fa-facebook-square">
+								</i>
+							</a>
 						</div>
-					<div class='col-xs-4'>
-						<!-- Twitch:  -->
-						<a href="https://www.facebook.com/AugmentUCLA/" target="_self">
-							<i class="fa img-responsive img-hover fa-2x fa-twitch"></i>
-						</a>
+						<div class='col-xs-4'>
+							<!-- Twitter:  -->
+							<a href="https://twitter.com/augmentucla" target="_self">
+								<i class="fa img-responsive img-hover fa-2x fa-twitter"></i>
+							</a>
+							</div>
+						<div class='col-xs-4'>
+							<!-- Twitch:  -->
+							<a href="https://www.facebook.com/AugmentUCLA/" target="_self">
+								<i class="fa img-responsive img-hover fa-2x fa-twitch"></i>
+							</a>
+						</div>
 					</div>
 				</div>
 			</div>
 		</div>
-	</div>
-	<div class="row">
-		<div class=col-lg-12>
-			<small>Copyright &copy; UCLA Augment. </small>
-		<div>
+		<div class="row">
+			<div class=col-lg-12>
+				<small>Copyright &copy; UCLA Augment. </small>
+			<div>
+		</div>
 	</div>
 </footer>
